# algtraining

./: .gitignore  README.md
10_sparse_matrix/: CMakeLists.txt  README.md
10_sparse_matrix/164_sparseMatProgram/: CMakeLists.txt  README.md  main.c
10_sparse_matrix/include/: helpFuncs.h  sparseMatrix.h
10_sparse_matrix/src/: sparseMatrix.c
11_linked_lists/: CMakeLists.txt  README.md
11_linked_lists/175_showLinkedList/: CMakeLists.txt  README.md  main.c
11_linked_lists/177_showRecursLinkedList/: CMakeLists.txt  README.md  main.c
11_linked_lists/180_countAndSum/: CMakeLists.txt  README.md  main.c
11_linked_lists/182_max/: CMakeLists.txt  README.md  main.c
11_linked_lists/184_search/: CMakeLists.txt  README.md  main.c
11_linked_lists/191_insert/: CMakeLists.txt  README.md  main.c
11_linked_lists/193_delete/: CMakeLists.txt  README.md  main.c
11_linked_lists/197_removeDuplicates/: CMakeLists.txt  README.md  main.c
11_linked_lists/201_reverseList/: CMakeLists.txt  README.md  main.c
11_linked_lists/204_mergelists/: CMakeLists.txt  README.md  main.c
11_linked_lists/210_circularlists/: CMakeLists.txt  README.md  main.c
11_linked_lists/222_doublylinkedlist/: CMakeLists.txt  README.md  main.c
11_linked_lists/226_studentChallenge1_findMiddle/: CMakeLists.txt  README.md  main.c
11_linked_lists/227_studentChallenge2_intersect/: CMakeLists.txt  README.md  main.c
11_linked_lists/include/: dlinkedlist.h  helpFuncs.h  linkedlist.h  rlinkedlist.h
11_linked_lists/mergeSortTest/: CMakeLists.txt  README.md  main.c
11_linked_lists/src/: dlinkedlist.c  linkedlist.c  rlinkedlist.c
12_sparseMatWithLL/: CMakeLists.txt  README.md
12_sparseMatWithLL/228_sparseMatLL/: CMakeLists.txt  README.md  main.c
12_sparseMatWithLL/229_polynomial/: CMakeLists.txt  README.md  main.c
12_sparseMatWithLL/include/: poly.h  sparseMatrix.h
12_sparseMatWithLL/src/: poly.c  sparseMatrix.c
13_stack/: CMakeLists.txt  README.md
13_stack/234_stackArray/: CMakeLists.txt  README.md  main.c
13_stack/237_stackLL/: CMakeLists.txt  README.md  main.c
13_stack/241_parentheses/: CMakeLists.txt  README.md  main.c
13_stack/246_postfixConversion1/: CMakeLists.txt  README.md  main.c
13_stack/249_postfixConversion2/: CMakeLists.txt  README.md  main.c
13_stack/252_postfixEvaluation/: CMakeLists.txt  README.md  main.c
13_stack/include/: stackarr.h  stackll.h
13_stack/src/: stackarr.c  stackll.c
14_queues/: CMakeLists.txt  README.md
14_queues/257_queue/: CMakeLists.txt  README.md  main.c
14_queues/261_circularQueue/: CMakeLists.txt  README.md  main.c
14_queues/263_queueLL/: CMakeLists.txt  README.md  main.c
14_queues/include/: helpFuncs.h  queue.h  queueCircular.h  queueLL.h
14_queues/src/: queue.c  queueLL.c
15_trees/: CMakeLists.txt
15_trees/299_binTree/: CMakeLists.txt  README.md  main.c
15_trees/include/: binTree.h  queueCircular.h
15_trees/src/: binTree.c  queueCircular.c  stackarr.c
16_BST/: CMakeLists.txt
16_BST/305_createBST/: CMakeLists.txt  README.md  main.c
16_BST/307_deleteNodesBST/: CMakeLists.txt  README.md  main.c
16_BST/309_BSTfromPO/: CMakeLists.txt  README.md  main.c
16_BST/include/: bst.h  stackarr.h
16_BST/src/: binTree.c  bst.c
17_AVL/: CMakeLists.txt  README.md
17_AVL/317_AVLTrees/: CMakeLists.txt  MakeArray.py  README.md  arrayOfInts.h  main.c
17_AVL/include/: arrayAdt.h  avl.h  bst.h  stackarr.h
17_AVL/src/: arrayAdt.c  avl.c  binTree.c  bst.c  stackarr.c
18_RBTrees/: CMakeLists.txt  README.md
18_RBTrees/326_RedBlackTrees/: CMakeLists.txt  README.md  main.c
18_RBTrees/include/: queueCircular.h  redblack.h  stackarr.h
18_RBTrees/src/: queueCircular.c  redblack.c  stackarr.c
19_heap/: CMakeLists.txt
19_heap/329_insertHeap/: README.md
19_heap/332_heapSort/: CMakeLists.txt  README.md  main.c
19_heap/332_sortHeap/: CMakeLists.txt  README.md  main.c
19_heap/include/: heap.h  heapADT.h
19_heap/src/: heap.c  heapADT.c
20_sortingAlgs/: CMakeLists.txt  README.md
20_sortingAlgs/338_bubbleSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/341_insertionSort/: CMakeLists.txt  README.md
20_sortingAlgs/348_selectionSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/353_quickSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/356_mergeSortI/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/358_mergeSortR/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/360_countSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/362_radixSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/363_shellSort/: CMakeLists.txt  README.md  main.c
20_sortingAlgs/SpeedTest/: CMakeLists.txt  README.md  generatedarray.h  main.c  make_array.py
20_sortingAlgs/include/: helpFuncs.h  sortAlgs.h
20_sortingAlgs/src/: sortAlgs.c
21_hashing/: CMakeLists.txt
21_hashing/366_chaining/: CMakeLists.txt  README.md  main.c
21_hashing/369_linprobing/: CMakeLists.txt  README.md  main.c
21_hashing/include/: chainhash.h  hashing.h  linprobe.h
22_graphs/: CMakeLists.txt  README.md
22_graphs/377_breadthFS/: CMakeLists.txt  README.md  main.c
22_graphs/379_depthFS/: CMakeLists.txt  README.md  main.c
22_graphs/384_prims/: CMakeLists.txt  README.md  main.c
22_graphs/388_kruskals/: CMakeLists.txt  README.md  main.c
22_graphs/include/: graphs.h  heap.h  stackarr.h
22_graphs/src/: graphs.c  heap.c  queueCircular.c  stackarr.c
7_array_adts/: README.md
7_array_adts/challenge4_dupEntiresHashing/: CMakeLists.txt  README.md  main.c
8_strings/141_permutation/: CMakeLists.txt  README.md  main.c
9_matrices/: CMakeLists.txt  README.md
9_matrices/143_diagMatrix/: CMakeLists.txt  README.md  main.c
9_matrices/145_lowSRMatrix/: CMakeLists.txt  README.md  main.c
9_matrices/148_lowSCMatrix/: CMakeLists.txt  README.md  main.c
9_matrices/151_upSRMatrix/: CMakeLists.txt  README.md  main.c
9_matrices/152_upSCMatrix/: CMakeLists.txt  main.c
9_matrices/include/: matrixAdt.h  smatrixAdt.h
9_matrices/src/: arrayAdt.c  matrixAdt.c  smatrixAdt.c
baseFiles/: CMakeLists.txt  baseClassOpts.c
extra/1/: main.c  (+1 more)
(+82 files in other folders)
